complete except lp generation